AUTH-1169: Additional test coverage for UpdateEmailHandler